quorum/test/tests/TypeChecker/Pass/ImpAssignTextObjTextObj.quorum
Text txt
txt:SetValue("t")
Text t = txt
text x = txt:GetValue()