quorum/test/tests/TypeChecker/Fail/ImpAssignIntObjTextObj.quorum
Text t
t:setValue("text")
Integer i = t